--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "express": "^4.18.3"
+    "date-fns": "^3.5.0",
+    "express": "^4.18.3",
+    "uuid": "^9.0.1"
   }
 }
